Fixing a syntax error.

--- a/site/node-2019.html
+++ b/site/node-2019.html
@@ -40,19 +40,19 @@
 
         <h1>The Node highlights of 2019:</h1>
 
-        <p><strong><a href="https://blog.logrocket.com/what-is-deno/" title="What is Deno, and How Is It Different From Node?"></a></strong></p>
+        <p><strong><a href="https://blog.logrocket.com/what-is-deno/" title="What is Deno, and How Is It Different From Node?">What is Deno, and How Is It Different From Node?</a></strong></p>
 
         <p>During the summer there was a lot of chatter about Deno (<em>an anagram of Node</em>). It's an interesting and experimental JavaScript runtime that's being worked on by the original creator of Node.js and others. This post looked into just how its creator Ryan Dahl has reapproached the idea of building something like Node, and how Deno is different.</p>
 
         <hr class="half_width">
 
-        <p><strong><a href="https://www.youtube.com/watch?v=z6JRlx5NC9E" title="Deno, A New Way to JavaScript?"></a></strong></p>
+        <p><strong><a href="https://www.youtube.com/watch?v=z6JRlx5NC9E" title="Deno, A New Way to JavaScript?">Deno, A New Way to JavaScript?</a></strong></p>
 
         <p>The curiosity around Deno remains! Ryan Dahl originally created Node about ten years ago, and here he breaks down this new approach. (Note: <em>Audio is bad for the first few minutes but gets better</em>.)</p>
 
         <hr class="half_width">
 
-        <p><strong><a href="https://blog.logrocket.com/node-js-multithreading-what-are-worker-threads-and-why-do-they-matter-48ab102f8b10/" title="Node Multithreading: What Are Worker Threads and Why Do They Matter?"  </a></strong></p>
+        <p><strong><a href="https://blog.logrocket.com/node-js-multithreading-what-are-worker-threads-and-why-do-they-matter-48ab102f8b10/" title="Node Multithreading: What Are Worker Threads and Why Do They Matter?">Node Multithreading: What Are Worker Threads and Why Do They Matter?</a></strong></p>
 
         <p>Since the release of Node 10.5, the new <code>worker_threads</code> module opened up the possibility of building multi-threaded Node apps. It's been enabled by default since Node 11.7 so this post runs through what it's about and how to use it.</p>
 
