Fixing a syntax error.

--- a/site/node-2019.html
+++ b/site/node-2019.html
@@ -70,7 +70,7 @@
 
         <hr class="half_width">
 
-        <p><strong><a href="https://blog.atulr.com/nodegui-intro/" title= "NodeGUI: A New Way to Build Native Desktop Apps with JavaScript?"</a></strong></p>
+        <p><strong><a href="https://blog.atulr.com/nodegui-intro/" title="NodeGUI: A New Way to Build Native Desktop Apps with JavaScript?">NodeGUI: A New Way to Build Native Desktop Apps with JavaScript?</a></strong></p>
 
         <p>Here's an interesting alternative to something like Electron that plenty of Node Weekly readers took a look at. It's based around Qt (<em>a popular, open source cross platform widget toolkit</em>) rather than a browser engine, so should prove more efficient and use less memory than Electron.</p>
 
