--- a/site/go-2019.html
+++ b/site/go-2019.html
@@ -27,8 +27,8 @@
       <div style="background: url(https://superhighway.dev/images/v1576594669/skoncp8u1eruim6ypis3.jpg), #369cee; height: 25vw; background-size: cover; background-position: center;"></div>
       <header>
         <div class="sub">Year in Review</div>
-        <h1>The Top Golang Links of 2019</h1>
-        <h2>A look back at what proved popular within the Go community this year.</h2>
+        <h1>Our Readers' Top Go Links of 2019</h1>
+        <h2>A look back at what proved popular within our part of the Go community this year.</h2>
         <p class="byline">by <a href="https://medium.com/@zaecooperpress">Za'e Johnson</a>&nbsp;&nbsp;|&nbsp;&nbsp;December 18, 2019</p>
       </header>
 
@@ -38,7 +38,7 @@
 
         <p>The email newsletter is read by over 29,000 developers — here's a look at what they clicked on in 2019:</p>
 
-        <h1>The Golang highlights of 2019:</h1>
+        <h1>The Go highlights of 2019:</h1>
 
         <p><strong><a href="https://dave.cheney.net/practical-go/presentations/qcon-china.html">Practical Go: Real World Advice for Writing Maintainable Go Programs</a></strong></p>
 
@@ -54,13 +54,13 @@
 
         <p><strong><a href="https://www.alexedwards.net/blog/an-overview-of-go-tooling">An Overview of Go's Tooling</a></strong></p>
 
-        <p>Simply calling this an "Overview" seemed a little insufficient. This well-received tome of information detailed how to use Go to do just about everything from linting to rewrite rules to stress testing. Bookmark this one.</p>
+        <p>Simply calling this an "overview" seemed a little insufficient. This well-received tome of information detailed how to use Go to do just about everything from linting to rewrite rules to stress testing. Bookmark this one.</p>
 
         <hr class="half_width">
 
         <p><strong><a href="https://twitter.com/i/web/status/1189631604324327424">Go 1.14 Should Be Great</a></strong></p>
 
-        <p>We're still waiting on Go 1.14, but it seems there is plenty of interest in the next major release (<a href="https://groups.google.com/forum/#!msg/golang-nuts/49xFw3IkrEw/yxSf1TG8AgAJ">a beta is avaialble now</a>). This <a href="https://twitter.com/i/web/status/1189631604324327424">tweet thread</a> highlighed what to expect. A <a href="https://docs.google.com/presentation/d/1HfIwlVTmVWQk94OLKfTGvXpQxyp0U4ywG1u5j2tjiuE/edit#slide=id.g550f852d27_228_0">popular slidedeck from Daniel Martí</a> also ran through some personal picks on what's looking good in the upcoming release.</p>
+        <p>We're still waiting on Go 1.14, but it seems there is plenty of interest in the next major release (<a href="https://groups.google.com/forum/#!msg/golang-nuts/49xFw3IkrEw/yxSf1TG8AgAJ">a beta is available now</a>). This <a href="https://twitter.com/i/web/status/1189631604324327424">tweet thread</a> highlighed what to expect. A <a href="https://docs.google.com/presentation/d/1HfIwlVTmVWQk94OLKfTGvXpQxyp0U4ywG1u5j2tjiuE/edit#slide=id.g550f852d27_228_0">popular slidedeck from Daniel Martí</a> also ran through some personal picks on what's looking good in the upcoming release.</p>
 
         <hr class="half_width">
 
