--- a/site/postgres-2019.html
+++ b/site/postgres-2019.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="/favicon.png" type="image/png" />
 
   <!-- Things to change -->
-  <title>The top PostgreSQL links of 2019</title>
+  <title>The top Postgres links of 2019</title>
   <meta name="description" content="Postgres highlights from the past twelve months." />
   <meta property="og:description" content="Postgres highlights from the past twelve months." />
   <meta property="og:title" content="The top PostgreSQL links of 2019" />
@@ -27,8 +27,8 @@
       <div style="background: url(https://superhighway.dev/images/v1576752103/wmqfzetcuvixcpjn8anf.jpg), #369cee; height: 25vw; background-size: cover; background-position: center;"></div>
       <header>
         <div class="sub">Year in Review</div>
-        <h1>The Top PostgreSQL Links of 2019</h1>
-        <h2>A look back at what proved popular within the PG community this year.</h2>
+        <h1>Our Readers' Top Postgres Links of 2019</h1>
+        <h2>A look back at what proved popular within the Postgres community this year.</h2>
         <p class="byline">by <a href="https://medium.com/@zaecooperpress">Za'e Johnson</a>&nbsp;&nbsp;|&nbsp;&nbsp;December 19, 2019</p>
       </header>
 
