--- a/site/node-2019.html
+++ b/site/node-2019.html
@@ -7,10 +7,10 @@
   <link rel="icon" href="/favicon.png" type="image/png" />
 
   <!-- Things to change -->
-  <title>The top Node.js links of 2019</title>
+  <title>Our readers' top Node.js links of 2019</title>
   <meta name="description" content="Node highlights from the past twelve months." />
   <meta property="og:description" content="Node Weekly highlights from the past twelve months." />
-  <meta property="og:title" content="The top Node.js links of 2019" />
+  <meta property="og:title" content="Our readers' Node.js links of 2019" />
   <meta property="og:image" content="https://superhighway.dev/images/v1576768780/cjxe4yepc4qrqxkwd7l3.jpg" />
   <meta property="og:url" content="https://superhighway.dev/node-2019" />
   <meta name="twitter:site" content="@SUPERHlGHWAY" />
@@ -27,8 +27,8 @@
       <div style="background: url(https://superhighway.dev/images/v1576768780/cjxe4yepc4qrqxkwd7l3.jpg), #369cee; height: 25vw; background-size: cover; background-position: center;"></div>
       <header>
         <div class="sub">Year in Review</div>
-        <h1>The Top Node Links of 2019</h1>
-        <h2>A look back at what proved popular within the Node.js community this year.</h2>
+        <h1>Our Readers' Top Node Links of 2019</h1>
+        <h2>A look back at what proved popular within our part of the Node.js community this year.</h2>
         <p class="byline">by <a href="https://medium.com/@zaecooperpress">Za'e Johnson</a>&nbsp;&nbsp;|&nbsp;&nbsp;December 20, 2019</p>
       </header>
 
