--- a/site/index-test.html
+++ b/site/index-test.html
@@ -24,7 +24,7 @@
 <body class="home" id="top">
 
   <header>
-    <img src="favicon.png" height="21" alt="superhighway" /><img src="logo.png" height="21" alt="superhighway" />
+    <div class="header-brand"><img src="favicon.png" height="21" alt="superhighway" /><img src="logo.png" height="21" alt="superhighway" /></div>
   </header>
 
   <main>
