--- a/site/index-test.html
+++ b/site/index-test.html
@@ -24,7 +24,7 @@
 <body class="home" id="top">
 
   <header>
-    <div class="header-brand"><img src="favicon.png" height="21" alt="superhighway" /><img src="logo.png" height="21" alt="superhighway" /></div>
+    <div class="header-brand"><img src="favicon.png" height="40" alt="superhighway" /><img src="logo.png" height="25" alt="superhighway" style="position: relative;bottom: 5px;left: 10px;" /></div>
   </header>
 
   <main>
