Updated Luca Ferrari Interview, added some styling.

--- a/site/luca-ferrari-interview.html
+++ b/site/luca-ferrari-interview.html
@@ -51,9 +51,9 @@
 
         <p>One suggestion I always gave is to try and immediatly <a href="https://wiki.postgresql.org/wiki/Mailing_Lists">join the mailing lists</a>: there are several that differentiate by topic and amount of traffic. Most are very active and have quality contributors that take care in providing accuate replies to users' questions, that spend time in reproducing errors and edge-cases, and who will generally help you. That's a mandatory place where you have to start, in my opinion, to better learn about the project, its features and its culture.</p>
 
-        <p>I can also elaborate a litte more on this question by anwering not "where to start" but "why to start". Thanks to Postgres and its healthy community, I've learnt a lot about databases and data management. Quite frankly, I have not found a so wide learning experience in other database contexts, especially in the commercial ones where you are supposed to "take it as a belief". Therefore, if you want to learn why a particular PostgreSQL feature is there, you just have to ask!</p>
+        <p>I can elaborate by stating it's often not "where to start" but "why to start". Thanks to Postgres and its healthy community, I've learnt a lot about databases and data management in general. Quite frankly, I've not found such a wide learning experience in other database contexts, especially in the commercial ones where you are supposed to "take it as a belief". Therefore, if you want to learn why a particular PostgreSQL feature is there, you just have to ask!</p>
 
-        <p><strong>Where should the line be drawn between doing things in an external programming language versus within Postgres? For example, data validation, or using procedures vs just coding things in an external language.</strong></p>
+        <p><strong>Where should the line be drawn between doing things in an external programming language versus within Postgres?</strong> <em>For example, data validation, or using procedures vs just coding things in an external language</em>.</p>
 
         <p>Often the right choice is to place business logic near the data it refers to, that is within the database itself. However, there are several things to take into account, including the developers' experience and the expresiveness of SQL-like derived languages like pl/PgSQL.</p>
 
@@ -69,7 +69,7 @@
 
         <p><strong>Finally, what gave you the idea to write "PostgreSQL 11 Server Side Programming"?</strong></p>
 
-        <a href="https://www.packtpub.com/big-data-and-business-intelligence/postgresql-11-server-side-programming-quick-start-guide" ><img src="https://www.packtpub.com/media/catalog/product/cache/e4d64343b1bc593f1c5348fe05efa4a6/b/1/b11208.png" style="float:right; height: 180px; margin: 20px 0px 20px 40px; " alt="PostgreSQL 11 Server Side Programming by Luca Ferrari" /></a>
+        <a href="https://www.packtpub.com/big-data-and-business-intelligence/postgresql-11-server-side-programming-quick-start-guide" ><img src="https://www.packtpub.com/media/catalog/product/cache/e4d64343b1bc593f1c5348fe05efa4a6/b/1/b11208.png" style="float:right; height: 300px; margin: 0px 0px 20px 40px; " alt="PostgreSQL 11 Server Side Programming by Luca Ferrari" /></a>
 
         <p>I never thought about writing a <em>whole</em> book by myself, even if I'm a avid reader of technical books. However, in 2018 I was in the middle of two PostgreSQL related courses, when a friend of mine pushed me to the idea of writing a book. I was never scared about writing and committing to "long" projects, so I decided it could be an interesting project, and quite frankly, it was very interesting. I'm not saying that it was easy, and on the other hand that it was too hard for other people to do the same, but as you can imagine writing a book involves a lot of "boring" activities like rephrasing, adjusting details so that all the captions, listings, and pictures look coherent, and so on. Luckily, having been in the university field for so long did provde me a good habit in being precise at writing documents, and so it was how the book was born.</p>
 
@@ -79,7 +79,7 @@
 
         <p>Lastly, allow me to announce that I'm working at another book right now: me and a friend of mine are writing a more general book on PostgreSQL that will try to answer your questions, leading the reader through the main features that make PostgreSQL unique and great.</p>
 
-        <p><em>Be sure to check out Luca's book PostgreSQL 11 Server Side Programming Quick Start Guide to learn more about the topics covered in this interview. You can also find the code from the book in this GitHub repo.</em>.</p>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>Be sure to check out Luca's book <a href="https://www.packtpub.com/big-data-and-business-intelligence/postgresql-11-server-side-programming-quick-start-guide">PostgreSQL 11 Server Side Programming Quick Start Guide</a> to learn more about the topics covered in this interview. You can also find the code from the book <a href="https://github.com/fluca1978/postgresql-11-quick-start-guide">in this GitHub&nbsp;repo</a></em>.</p>
 
         <hr class="article_end">
 
