Minor edit (Luca Ferrari interview)

--- a/site/luca-ferrari-interview.html
+++ b/site/luca-ferrari-interview.html
@@ -53,7 +53,7 @@
 
         <p>I can elaborate by stating it's often not "where to start" but "why to start". Thanks to Postgres and its healthy community, I've learnt a lot about databases and data management in general. Quite frankly, I've not found such a wide learning experience in other database contexts, especially in the commercial ones where you are supposed to "take it as a belief". Therefore, if you want to learn why a particular PostgreSQL feature is there, you just have to ask!</p>
 
-        <p><strong>Where should the line be drawn between doing things in an external programming language versus within Postgres?</strong> <em>For example, data validation, or using procedures vs just coding things in an external language</em>.</p>
+        <p><strong>Where should the line be drawn between doing things in an external programming language versus within Postgres?</strong></p>
 
         <p>Often the right choice is to place business logic near the data it refers to, that is within the database itself. However, there are several things to take into account, including the developers' experience and the expresiveness of SQL-like derived languages like pl/PgSQL.</p>
 
