Minor edits to Barrere interview.

--- a/site/thibaut-barrere-interview.html
+++ b/site/thibaut-barrere-interview.html
@@ -27,8 +27,8 @@
       <header>
         <div class="sub">Ruby Interview Series</div>
         <h1>A Chat with Thibaut Barrère</h1>
-        <h2>Long time Rubyist and Kiba maintainer.</h2>
-        <p class="byline">by <a href="https://twitter.com/ruprict">Glenn Goodrich</a>&nbsp;&nbsp;&nbsp;April 30, 2020</p>
+        <h2>Long time Rubyist and Kiba maintainer</h2>
+        <p class="byline">by <a href="https://twitter.com/ruprict">Glenn Goodrich</a>&nbsp;&middot;&nbsp;April 30, 2020</p>
       </header>
 
       <div class="content">
