--- a/site/brittany-martin-interview.html
+++ b/site/brittany-martin-interview.html
@@ -27,7 +27,7 @@
       <header>
         <div class="sub">Ruby Interview Series</div>
         <h1>A Chat with Brittany Martin</h1>
-        <h2>Host of the Ruby on Rails 5by5 Podcast</h2>
+        <h2>🎙 Host of the Ruby on Rails 5by5 Podcast</h2>
         <p class="byline">by <a href="https://twitter.com/ruprict">Glenn Goodrich</a>&nbsp;&middot;&nbsp;May 13, 2020</p>
       </header>
 
