Added a draft homepage + CSS changes.

--- a/site/index-test.html
+++ b/site/index-test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/1.css" />
+  <link rel="stylesheet" href="1.css" />
   <link rel="icon" href="/favicon.png" type="image/png" />
 
   <!-- Things to change -->
@@ -30,29 +30,56 @@
   <main>
 
     <article class="top-story">
-      <img src="https://superhighway.dev/images/v1576512163/urbpi3yj22xbq3prsqat.jpg" alt="2019">
-      <div class="sub">Year in Review</div>
-      <h1>The top Frontend links of 2019 🚀</h1>
-      <h2>A look back at what proved popular within the frontend community this year.</h2>
-      <img src="https://superhighway.dev/images/v1576590879/lpr7nxa605wcequeu5mb.jpg" alt="Chris Brandrick" > <p class="byline">by <a href="https://twitter.com/chrisbrandrick">Chris Brandrick</a>&nbsp;&nbsp;|&nbsp;&nbsp;December 18, 2019</p>
+      <a href="https://superhighway.dev/ben-ellerby-interview"><img src="https://superhighway.dev/images/v1590400703/xeprnxzqttcirvirzuvp.jpg" alt="Serverless chat with Ben Ellerby"></a>
+      <div class="content">
+        <p class="sub">Serverless Q&A</p>
+        <h1><a href="https://superhighway.dev/ben-ellerby-interview">A Chat with Ben Ellerby</a></h1>
+        <h2>We talk to Ben Ellerby, Serverless pundit and VP of Engineering at Theodo.</h2>
+        <div class="author_meta">
+          <img src="https://superhighway.dev/images/v1587565623/w3trbuxgn6gdjr3gmawm.jpg" alt="Peter Cooper" > <p class="byline"><em>by</em> <a href="https://twitter.com/peterc">Peter Cooper</a>&nbsp;&nbsp;|&nbsp;&nbsp;May 22, 2020</p>
+        </div>
+      </div>
     </article>
 
-    <article>
-      <img src="https://superhighway.dev/images/v1575475686/add7rkqcd6gfa8glmzxz.jpg" alt="GitHub website">
-      <h1>A Q&A with Eileen Uchitelle of GitHub</h1>
+    <article class="content">
+      <a href="https://superhighway.dev/staticcheck-in-action"><img src="https://superhighway.dev/images/w_1280,e_sharpen:60/odl8suayxjlxh8xngmc3.jpg" alt="Staticcheck in Action"></a>
+      <div class="article_meta">
+      <p class="sub">Bug catching in Go</p>
+      <h1><a href="https://superhighway.dev/staticcheck-in-action">Staticcheck in Action</a></h1>
+      <p class="byline"><em>by</em> <a href="https://twitter.com/shawnps">Shawn Smith</a>&nbsp;&nbsp;|&nbsp;&nbsp;November 8, 2019</p>
+      </div>
     </article>
 
-    <article>
-      <img src="https://superhighway.dev/images/w_1280,e_sharpen:60/odl8suayxjlxh8xngmc3.jpg" alt="Chasing bugs">
-      <h1>Staticcheck in Action</h1>
+    <article class="content">
+      <a href="https://superhighway.dev/brittany-martin-interview"><img src="https://superhighway.dev/images/v1589294913/wqsbjcpdfygv3p3ypeek.jpg" alt="A Chat with Brittany Martin"></a>
+      <div class="article_meta">
+      <p class="sub">Ruby Interview Series</p>
+      <h1><a href="https://superhighway.dev/brittany-martin-interview">A Chat with Ruby on Rails Podcast Host Brittany Martin</a></h1>
+      <p class="byline"><em>by</em> <a href="https://twitter.com/ruprict">Glenn Goodrich</a>&nbsp;&nbsp;|&nbsp;&nbsp;May 13, 2020</p>
+      </div>
     </article>
+
+    <article class="content">
+      <a href="https://superhighway.dev/piloting-go"><img src="https://superhighway.dev/images/w_1280,e_sharpen:60/qvwrxnzsn4qrguebluix.jpg" alt="Piloting Go Within Your Company"></a>
+      <div class="article_meta">
+      <p class="sub">Write less Java, More Go</p>
+      <h1><a href="https://superhighway.dev/piloting-go">Piloting Go Within Your Company</a></h1>
+      <p class="byline"><em>by</em> Junaid Warwani&nbsp;&nbsp;|&nbsp;&nbsp;November 1, 2019</p>
+      </div>
+    </article>
+
+    <article class="content">
+      <a href="https://superhighway.dev/thibaut-barrere-interview"><img src="https://superhighway.dev/images/v1588683602/dtpxk9gioqocrrf3exxd.jpg" alt="A Chat with Long-Time Rubyist Thibaut Barrère"></a>
+      <div class="article_meta">
+      <p class="sub">Ruby Interview Series</p>
+      <h1><a href="https://superhighway.dev/thibaut-barrere-interview">A Chat with Long-Time Rubyist Thibaut Barrère</a></h1>
+      <p class="byline"><em>by</em> <a href="https://twitter.com/ruprict">Glenn Goodrich</a>&nbsp;&nbsp;|&nbsp;&nbsp;April 30, 2020</p>
+      </div>
+    </article>
+
+
 
   </main>
-
-
-        <hr class="article_end">
-
-      <hr class="promo_line">
 
 </body>
 <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
