Added homepage link to site logo.

--- a/site/brittany-martin-interview.html
+++ b/site/brittany-martin-interview.html
@@ -90,7 +90,7 @@
 
     </article>
 
-    <div id="logo"><a href="#">&#9776;&nbsp;&nbsp;<img src="logo.png" height="21" alt="superhighway" /></a></div>
+    <div id="logo"><a href="https://superhighway.dev/">&#9776;&nbsp;&nbsp;<img src="logo.png" height="21" alt="superhighway" /></a></div>
 
 </body>
 <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
