Added David Flanagan interview to the homepage.

--- a/site/index.html
+++ b/site/index.html
@@ -30,14 +30,23 @@
   <main>
 
     <article class="top-story">
-      <a href="https://superhighway.dev/ben-ellerby-interview"><img src="https://superhighway.dev/images/v1590400703/xeprnxzqttcirvirzuvp.jpg" alt="Serverless chat with Ben Ellerby"></a>
+      <a href="https://superhighway.dev/david-flanagan-interview"><img src="https://superhighway.dev/images/v1591625630/i2bhkrxhvcepumchemxd.jpg" alt="Serverless chat with Ben Ellerby"></a>
       <div class="content">
         <p class="sub">Serverless Q&A</p>
-        <h1><a href="https://superhighway.dev/ben-ellerby-interview">A Chat with Ben Ellerby</a></h1>
-        <h2>We talk to Ben Ellerby, Serverless pundit and VP of Engineering at Theodo.</h2>
+        <h1><a href="https://superhighway.dev/david-flanagan-interview">A Q&A with David Flanagan</a></h1>
+        <h2>We talk to the author of JavaScript: The Definitive Guide</h2>
         <div class="author_meta">
-          <img src="https://superhighway.dev/images/v1587565623/w3trbuxgn6gdjr3gmawm.jpg" alt="Peter Cooper" > <p class="byline"><em>by</em> <a href="https://twitter.com/peterc">Peter Cooper</a>&nbsp;&nbsp;|&nbsp;&nbsp;May 22, 2020</p>
+          <img src="https://superhighway.dev/images/v1587565623/w3trbuxgn6gdjr3gmawm.jpg" alt="Peter Cooper" > <p class="byline"><em>by</em> <a href="https://twitter.com/peterc">Peter Cooper</a>&nbsp;&nbsp;|&nbsp;&nbsp;May 29, 2020</p>
         </div>
+      </div>
+    </article>
+
+    <article class="content">
+      <a href="https://superhighway.dev/ben-ellerby-interview"><img src="https://superhighway.dev/images/v1590400703/xeprnxzqttcirvirzuvp.jpg" alt="Serverless chat with Ben Ellerby"></a>
+      <div class="article_meta">
+      <p class="sub">Serverless Q&A</p>
+      <h1><a href="https://superhighway.dev/ben-ellerby-interview">A Chat with Ben Ellerby</a></h1>
+      <p class="byline"><em>by</em> <a href="https://twitter.com/peterc">Peter Cooper</a>&nbsp;&nbsp;|&nbsp;&nbsp;May 22, 2020</p>
       </div>
     </article>
 
