Added links and book cover to David Flanagan interview.

--- a/site/index.html
+++ b/site/index.html
@@ -32,7 +32,7 @@
     <article class="top-story">
       <a href="https://superhighway.dev/david-flanagan-interview"><img src="https://superhighway.dev/images/v1591625630/i2bhkrxhvcepumchemxd.jpg" alt="Serverless chat with Ben Ellerby"></a>
       <div class="content">
-        <p class="sub">Serverless Q&A</p>
+        <p class="sub">Meet the Author</p>
         <h1><a href="https://superhighway.dev/david-flanagan-interview">A Q&A with David Flanagan</a></h1>
         <h2>We talk to the author of JavaScript: The Definitive Guide</h2>
         <div class="author_meta">
