--- a/site/valeri-karpov-interview.html
+++ b/site/valeri-karpov-interview.html
@@ -39,8 +39,6 @@
 
         <p><strong>Why should MongoDB still be considered for new apps when relational systems like Postgres have added so many NoSQL features in recent years?</strong></p>
 
-        <a href="https://masteringjs.io/ebooks/mastering-mongoose-node-weekly" ><img src="https://superhighway.dev/images/v1595928264/zd0sugn0wfwsiiljpbn1.jpg" style="float:right; height: 300px; margin: 0px 0px 20px 40px; " alt="Mastering Mongoose: The Official Mongoose eBook" /></a>
-
         <p>From what I've seen, MongoDB's overall developer experience is far ahead of traditional relational systems. Many RDBMS's have added support for querying and indexing JSON objects in recent years, but MongoDB's query language makes handling deeply nested objects feel smooth and natural, especially with <a href="https://thecodebarbarian.com/a-nodejs-perspective-on-mongodb-36-array-filters.html">array filters in MongoDB 3.6</a>.</p>
 
         <p>As a developer, I love working with change streams and MongoDB's built-in geospatial queries and indexes. As a database operator, I don't know how I ever ran a production app without point-in-time backups and zero-downtime upgrades.</p>
@@ -59,7 +57,9 @@
 
       <p>On the other hand, pseudo-code with a lot of "your code here" comments often is too hand-wavey to provide any real insight. That's why I spend most of my time writing obsessing over the details of code samples, and use <a href="http://npmjs.com/package/acquit">a dedicated npm module</a> to enable testing the code samples in Mocha.</p>
 
-      <p>The hardest part of self publishing overall is getting the word out. Like many developers, I'm introverted, so promoting my work has always been a challenge. Thanks to Peter and CooperPress for giving me this opportunity and making that part of self-publishing a little easier!</p>
+      <a href="https://masteringjs.io/ebooks/mastering-mongoose-node-weekly" ><img src="https://superhighway.dev/images/v1595928264/zd0sugn0wfwsiiljpbn1.jpg" style="float:right; height: 300px; margin: 0px 0px 20px 40px; " alt="Mastering Mongoose: The Official Mongoose eBook" /></a>
+
+      <p>The hardest part of self publishing overall is getting the word out. Like many developers, I'm introverted, so promoting my work has always been a challenge. Thanks to Peter for giving me this opportunity and making that part of self-publishing a little easier!</p>
 
       <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>You can find Valeri on Twitter <a href="https://twitter.com/code_barbarian">@code_barbarian</a> or learn more about his <a href="https://masteringjs.io/ebooks/mastering-mongoose-node-weekly">Mastering Mongoose ebook here</a>.</em>.</p>
 
