Added masthead image.

--- a/site/valeri-karpov-interview.html
+++ b/site/valeri-karpov-interview.html
@@ -24,6 +24,9 @@
 <body class="article" id="top">
 
     <article>
+      <div style="background-color: #369cee; text-align: center">
+        <img src="https://superhighway.dev/images/v1595928551/uoiz45gdcxryg5luleej.jpg" style="margin: 0 auto; max-width: 90vw" />
+      </div>
       <header>
         <div class="sub">Meet the Author</div>
         <h1>A Q&A with Valeri Karpov</h1>
@@ -35,7 +38,9 @@
 
         <img src="https://superhighway.dev/images/v1542838790/cz0u3krahfubcselwlkc.png" style="float:right; height: 180px; margin: 20px 0px 20px 40px; " />
 
-        <p>Valeri, also known as <a href="http://thecodebarbarian.com/">The Code Barbarian</a>, is a prolific author of JavaScript tutorials and books and was also the person to coin the term MEAN (as in the MongoDB, Express.js, Angular and Node.js stack). To celebrate the release of his new book, <a href="https://masteringjs.io/ebooks/mastering-mongoose-node-weekly">Mastering Mongoose</a>, we've asked him a few questions:</p>
+        <p>Valeri, also known as <a href="http://thecodebarbarian.com/">The Code Barbarian</a>, is a prolific author of JavaScript tutorials and books and was also the person to coin the term MEAN (as in the MongoDB, Express.js, Angular and Node.js stack).</p>
+
+        <p>To celebrate the release of his new book, <a href="https://masteringjs.io/ebooks/mastering-mongoose-node-weekly">Mastering Mongoose</a>, we've asked him a few questions:</p>
 
         <p><strong>Why should MongoDB still be considered for new apps when relational systems like Postgres have added so many NoSQL features in recent years?</strong></p>
 
@@ -45,11 +50,15 @@
 
         <p><strong>What does Mongoose give you that using the MongoDB client library directly doesn't?</strong></p>
 
-      <p>Mongoose adds many of the features you might expect from a database framework: middleware, plugins, change tracking, data casting, and schema validation. Mongoose is like the MongoDB analog to an ORM: it lets you work with MongoDB using object-oriented programming, and fits neatly as the "M" in MVC. But, unlike an ORM, Mongoose does very little data transformation because of MongoDB's flexible document structure. With Mongoose, how your model instances look Node.js is almost identical to how your documents look in MongoDB.</p>
+      <p>Mongoose adds many of the features you might expect from a database framework: middleware, plugins, change tracking, data casting, and schema validation.</p>
+
+      <p>Mongoose is like the MongoDB analog to an ORM: it lets you work with MongoDB using object-oriented programming, and fits neatly as the "M" in MVC. But, unlike an ORM, Mongoose does very little data transformation because of MongoDB's flexible document structure. With Mongoose, how your model instances look Node.js is almost identical to how your documents look in MongoDB.</p>
 
       <p><strong>If Mongoose provides structure and makes things easier when using MongoDB from Node, what gap does your book fill?</strong></p>
 
-      <p>Writing docs requires a balancing act between providing enough structure vs being too opinionated. For example, when building Mongoose apps, I recommend avoiding using the aggregation framework and using middleware over setters when you need a setter that affects multiple properties. However, plenty of developers use these patterns and the online docs should help developers get unstuck fast, so I don't want to omit them from the docs or add a warning that can come off as pedantic.</p>
+      <p>Writing docs requires a balancing act between providing enough structure vs being too opinionated. For example, when building Mongoose apps, I recommend avoiding using the aggregation framework and using middleware over setters when you need a setter that affects multiple properties.</p>
+
+      <p>However, plenty of developers use these patterns and the online docs should help developers get unstuck fast, so I don't want to omit them from the docs or add a warning that can come off as pedantic.</p>
 
       <p><strong>What's the hardest part of self publishing your own technical books?</strong></p>
 
