--- a/site/michael-hartl-interview.html
+++ b/site/michael-hartl-interview.html
@@ -27,7 +27,7 @@
       <header>
         <div class="sub">Ruby Interview Series</div>
         <h1>A Q&A with Michael Hartl</h1>
-        <h2>creator of Ruby on Rails Tutorial, author of The Tau Manifesto, and founder of Learn Enough.</h2>
+        <h2>Creator of 'Ruby on Rails Tutorial', author of The Tau Manifesto, &amp; founder of Learn Enough.</h2>
         <p class="byline">by <a href="https://twitter.com/peterc">Peter Cooper</a>&nbsp;&middot;&nbsp;July 30, 2020</p>
       </header>
 
