--- a/site/michael-hartl-interview.html
+++ b/site/michael-hartl-interview.html
@@ -63,7 +63,7 @@
 
       <p>In 2030, the Rails Tutorial will be delivered by direct upload to your neural implant, like kung fu in The Matrix. “<em>Whoa,</em>” exclaimed Keanu. “<em>I know Ruby on Rails!</em>”</p>
 
-      <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>Michael is cofounder and principal author at <a href="https://www.learnenough.com">Learn Enough</a>.</em>.</p>
+      <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>Michael is cofounder and principal author at <a href="https://www.learnenough.com">Learn Enough</a></em>.</p>
 
         <hr class="article_end">
 
