Homepage content changes.

--- a/site/index.html
+++ b/site/index.html
@@ -30,14 +30,32 @@
   <main>
 
     <article class="top-story">
-      <a href="https://superhighway.dev/david-flanagan-interview"><img src="https://superhighway.dev/images/v1591625630/i2bhkrxhvcepumchemxd.jpg" alt="Serverless chat with Ben Ellerby"></a>
+      <a href="https://superhighway.dev/michael-hartl-interview"><img src="https://superhighway.dev/images/v1596705962/ccrzzfjavswcer4vdfng.jpg" alt="A Q&A with Michael Hartl"></a>
       <div class="content">
-        <p class="sub">Meet the Author</p>
-        <h1><a href="https://superhighway.dev/david-flanagan-interview">A Q&A with David Flanagan</a></h1>
-        <h2>We talk to the author of JavaScript: The Definitive Guide</h2>
+        <p class="sub">Ruby Interview Series</p>
+        <h1><a href="https://superhighway.dev/david-flanagan-interview">A Q&A with Michael Hartl</a></h1>
+        <h2>Creator of Ruby on Rails Tutorial, author of The Tau Manifesto, and founder of Learn Enough.</h2>
         <div class="author_meta">
-          <img src="https://superhighway.dev/images/v1587565623/w3trbuxgn6gdjr3gmawm.jpg" alt="Peter Cooper" > <p class="byline"><em>by</em> <a href="https://twitter.com/peterc">Peter Cooper</a>&nbsp;&nbsp;|&nbsp;&nbsp;May 29, 2020</p>
+          <img src="https://superhighway.dev/images/v1587565623/w3trbuxgn6gdjr3gmawm.jpg" alt="Peter Cooper" > <p class="byline"><em>by</em> <a href="https://twitter.com/peterc">Peter Cooper</a>&nbsp;&nbsp;|&nbsp;&nbsp;July 30, 2020</p>
         </div>
+      </div>
+    </article>
+
+    <article class="content">
+      <a href="https://superhighway.dev/valeri-karpov-interview"><img src="https://superhighway.dev/images/v1595928551/uoiz45gdcxryg5luleej.jpg" alt="A Q&A with Valeri Karpov"></a>
+      <div class="article_meta">
+      <p class="sub">Meet the Author</p>
+      <h1><a href="https://superhighway.dev/david-flanagan-interview">A Q&A with Valeri Karpov</a></h1>
+      <p class="byline"><em>by</em> <a href="https://twitter.com/peterc">Peter Cooper</a>&nbsp;&nbsp;|&nbsp;&nbsp;July 29, 2020</p>
+      </div>
+    </article>
+
+    <article class="content">
+      <a href="https://superhighway.dev/david-flanagan-interview"><img src="https://superhighway.dev/images/v1591625630/i2bhkrxhvcepumchemxd.jpg" alt="A Q&A with David Flanagan"></a>
+      <div class="article_meta">
+      <p class="sub">Meet the Author</p>
+      <h1><a href="https://superhighway.dev/david-flanagan-interview">A Q&A with David Flanagan</a></h1>
+      <p class="byline"><em>by</em> <a href="https://twitter.com/peterc">Peter Cooper</a>&nbsp;&nbsp;|&nbsp;&nbsp;May 29, 2020</p>
       </div>
     </article>
 
