--- a/site/sandi-metz-interview.html
+++ b/site/sandi-metz-interview.html
@@ -77,7 +77,7 @@
 
       <p>In the next few weeks I'm also recording my Practical Object-Oriented Design course as a series of videos. In late 2019 I committed to drastically reducing my airline flights before 2021 (because planet), and Covid arrived just in time to ensure I fulfilled that promise.</p>
 
-      <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>Folks who'd like to keep up with these projects can sign-up for Sandi's <a href="https://sandimetz.com/subscribe">Chainline Newsletter</a> or <a href="https://twitter.com/sandimetz">follow her</a> on Twitter.</em>.</p>
+      <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>Folks who'd like to keep up with these projects can sign-up for Sandi's <a href="https://sandimetz.com/subscribe">Chainline Newsletter</a> or <a href="https://twitter.com/sandimetz">follow her</a> on Twitter</em>.</p>
 
         <hr class="article_end">
 
