Updated homepage with new articles.

--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="1.css" />
-  <link rel="icon" href="/favicon.png" type="image/png" />
+  <link rel="icon" href="/favicon.ico" />
 
   <!-- Things to change -->
   <title>Superhighway</title>
@@ -30,14 +30,32 @@
   <main>
 
     <article class="top-story">
-      <a href="https://superhighway.dev/michael-hartl-interview"><img src="https://superhighway.dev/images/v1596705962/ccrzzfjavswcer4vdfng.jpg" alt="A Q&A with Michael Hartl"></a>
+      <a href="https://superhighway.dev/nick-sutterer-interview"><img src="https://superhighway.dev/images/v1604315733/s7e1oqqmv3ankuyutcif.png" alt="A Q&A with Nick Sutterer"></a>
       <div class="content">
         <p class="sub">Ruby Interview Series</p>
-        <h1><a href="https://superhighway.dev/michael-hartl-interview">A Q&A with Michael Hartl</a></h1>
-        <h2>Creator of Ruby on Rails Tutorial, author of The Tau Manifesto, and founder of Learn Enough.</h2>
+        <h1><a href="https://superhighway.dev/nick-sutterer-interview">A Q&A with Nick Sutterer</a></h1>
+        <h2>We talk to the prolific Ruby presenter, and creator of the Trailblazer framework.</h2>
         <div class="author_meta">
-          <img src="https://superhighway.dev/images/v1587565623/w3trbuxgn6gdjr3gmawm.jpg" alt="Peter Cooper" > <p class="byline"><em>by</em> <a href="https://twitter.com/peterc">Peter Cooper</a>&nbsp;&nbsp;|&nbsp;&nbsp;July 30, 2020</p>
+          <img src="https://superhighway.dev/images/v1575476433/pefiruwmpukhqeamerd2.jpg" alt="Glenn Goodrich" > <p class="byline"><em>by</em> <a href="https://twitter.com/ruprict">Glenn Goodrich</a>&nbsp;&nbsp;|&nbsp;&nbsp;October 22, 2020</p>
         </div>
+      </div>
+    </article>
+
+    <article class="content">
+      <a href="https://superhighway.dev/sandi-metz-interview"><img src="https://superhighway.dev/images/v1598370597/bvnlfnfjd4ti7q2esw7y.jpg" alt="A Q&A with Valeri Karpov"></a>
+      <div class="article_meta">
+      <p class="sub">Meet the Author</p>
+      <h1><a href="https://superhighway.dev/sandi-metz-interview">A Q&A with Sandi Metz</a></h1>
+      <p class="byline"><em>by</em> <a href="https://twitter.com/peterc">Glenn Goodrich</a>&nbsp;&nbsp;|&nbsp;&nbsp;August 27, 2020</p>
+      </div>
+    </article>
+
+    <article class="content">
+      <a href="https://superhighway.dev/michael-hartl-interview"><img src="https://superhighway.dev/images/v1596705962/ccrzzfjavswcer4vdfng.jpg" alt="A Q&A with Michael Hartl"></a>
+      <div class="article_meta">
+      <p class="sub">Ruby Interview Series</p>
+      <h1><a href="https://superhighway.dev/michael-hartl-interview">A Q&A with Michael Hartl</a></h1>
+      <p class="byline"><em>by</em> <a href="https://twitter.com/peterc">Peter Cooper</a>&nbsp;&nbsp;|&nbsp;&nbsp;July 30, 2020</p>
       </div>
     </article>
 
