--- a/site/black-friday-developer-deals-2020.html
+++ b/site/black-friday-developer-deals-2020.html
@@ -33,19 +33,21 @@
 
       <div class="content">
 
+        <img src="https://superhighway.dev/images/v1606400364/ls8wslapaknbphf0wyyl.jpg" style="width:120%; margin: 20px 0px; ">
+
         <p>The annual shopping bonanza that Black Friday has seemingly become isn't all just getting new socks, and cheap Amazon Echo devices — we've found a handful of great deals aimed solely at developers.</p>
 
         <p>Here's our list of deals on various courses, tools, and books that you may want to check out:</p>
 
         <p><strong><a href="https://nodecli.com">Node CLI Automation Course</a> [$99 - <em>was $249</em>]</strong></p>
 
-          <img src="https://superhighway.dev/images/v1606400455/o6jdedlrzlsctyghiwmy.png" style="float:right; height: 180px; margin: 20px 0px; " />
+          <img src="https://superhighway.dev/images/v1606400455/o6jdedlrzlsctyghiwmy.png" style="width:100%; margin: 20px 0px; " />
 
         <p>This step-by-step course from Ahmad Awais covers how to build both Node.js and JavaScript based CLI apps, DevTools, and npm packages for automation purposes (saving you time). It features over 100 videos, 21 example projects, access to a private Discord, and you'll get lifetime updates to any future course changes.</p>
 
         <p><strong><a href="https://flaviocopes.com/blackfriday/">Courses from Flavio Copes</a> [$49]</strong></p>
 
-          <img src="https://superhighway.dev/images/v1606400840/xldjwgr3oc5ik3m6asko.png" style="float:right; height: 180px; margin: 20px 0px; " />
+          <img src="https://superhighway.dev/images/v1606400840/xldjwgr3oc5ik3m6asko.png" style="width:100%; margin: 20px 0px; " />
 
         <p>All of Flavio's courses are on offer this week. The author/developer has courses on a variety of subjects, including React, Vue, Next.js, Svelte, and more. You can also grab all the courses in a bundle if you're feeling particularly scholarly.</p>
 
